src/index.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgb(255, 255, 255);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

a {
  font-weight: 500;
  /* color: #646cff; */
  color: black;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
}

h1 {
  font-size: 4em;
  line-height: 1.1;
}

nav {
  border: 10px solid ;
  background-color: white;
  border-radius: 50px;
  justify-content: center;
  min-width: 300px;
}

.topic {
  background-color: white;
  border-radius: 50px;
  justify-content: center;
  margin: 10px;
}


.nav-selector {
  font-size: 3.8vw;
  margin: 0.5rem;
  display: inline;
}

.article-content {
  font-size: 1.1em;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;

  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

img {
  border-radius: 50px;
}

ul {
	list-style-type: none;
	text-align: center;
	padding: 0%;
}
li {
	display: inline-block;
	margin: 0 10px;
	text-align: center;
}

.article-block {
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  
}
.article-block li {
  width: 300px;
  margin: 10px;
  padding: 10px;
  box-sizing: border-box;
}
.article-block li img {
  max-width: 100%;
  height: auto;
}

.comment-block {
  list-style: none;
  display: inline-flex;
  flex-wrap: wrap;
  justify-content: center;
}

.comment-block li {
  border: 2px solid ;
  background-color: white;
  padding: 1vw 4vw 1vw 4vw;
  border-radius: 50px;
  width: 300px;
  margin: 10px;
  padding: 10px;
  box-sizing: border-box;
}

@media (prefers-color-scheme: light) {
  :root {
    color: black;
    background-color: rgb(161, 238, 255);
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

